hphp/hack/test/typecheck/typing_fail_instance_of.php.exp
File "typing_fail_instance_of.php", line 34, characters 16-18:
Unbound name: dyn (an object type) (Naming[2049])
